--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <div class="main-container">
         <div class="background-pattern">
             <div class="text-container">
-                <h1>🎊 Feliz Cumpleaños 🎊</h1>
-                <h2>😃 ¡Bienvenida a tu página web!</h2>
-                <h2>Tu nuevo dominio web se llama <em>laurajimenez.online</em>. ¡Te vamos a ayudar a construir una página web!</h2>
-                <h2>¡Te queremos!</h2>
-                <h1>😘</h1>
-                <h2>Paola y Rodri</h2>
+                <h1>laurajimenez.online</h1>
             </div>
         </div>
     </div>
